--- a/TouristManagement-2/pom.xml
+++ b/TouristManagement-2/pom.xml
@@ -15,6 +15,10 @@
 	<name>TouristManagement-2</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
+	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>2021.0.5</spring-cloud.version>
 	</properties>
